fix the bug which make top drowdown disappear in apply stage detail view cause of header z-index

--- a/ClientManage.WebUI/Content/css/app.css
+++ b/ClientManage.WebUI/Content/css/app.css
@@ -478,7 +478,7 @@ img.stage-icon{
 	margin-bottom: -2px;
 	top: 0;
 	left: 0;
-	z-index: 1000000;
+	/*z-index: 1000000;*/
 }
 #stages-header-nav-container{
 	position: relative;
